// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WrappedSaveButton matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitBoxPack": "end",
        "WebkitJustifyContent": "flex-end",
        "display": "flex",
        "justifyContent": "flex-end",
        "marginBottom": "0px",
        "marginTop": "0px",
        "msFlexPack": "end",
        "position": "absolute",
        "right": "0px",
        "top": "0px",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      data-testid="save_button"
      style={
        Object {
          "WebkitAlignItems": "stretch",
          "WebkitBoxAlign": "stretch",
          "alignItems": "stretch",
          "backgroundColor": "rgba(12,38,61,1.00)",
          "borderBottomColor": "rgba(0,175,255,1.00)",
          "borderBottomLeftRadius": "50px",
          "borderBottomRightRadius": "50px",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "0px",
          "borderLeftColor": "rgba(0,175,255,1.00)",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0px",
          "borderRightColor": "rgba(0,175,255,1.00)",
          "borderRightStyle": "solid",
          "borderRightWidth": "0px",
          "borderTopColor": "rgba(0,175,255,1.00)",
          "borderTopLeftRadius": "50px",
          "borderTopRightRadius": "50px",
          "borderTopStyle": "solid",
          "borderTopWidth": "0px",
          "boxShadow": "0px 0.75px 1.5px rgba(0,0,0,0.24)",
          "display": "flex",
          "marginBottom": "0px",
          "marginLeft": "0px",
          "marginRight": "0px",
          "marginTop": "0px",
          "minHeight": "44px",
          "minWidth": "86px",
          "msFlexAlign": "stretch",
          "paddingBottom": "0px",
          "paddingLeft": "0px",
          "paddingRight": "0px",
          "paddingTop": "0px",
        }
      }
    >
      <div
        className="css-cursor-18t94o4 css-view-1dbjc4n r-cursor-1loqt21 r-overflow-1udh08x r-position-bnwqim r-touchAction-1otgn73"
        data-focusable={true}
        disabled={false}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        role="button"
        style={
          Object {
            "borderBottomLeftRadius": "50px",
            "borderBottomRightRadius": "50px",
            "borderTopLeftRadius": "50px",
            "borderTopRightRadius": "50px",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1777fci"
        >
          <div
            className="css-text-901oao css-textOneLine-bfa6kz r-letterSpacing-ud0q2t r-marginHorizontal-1ybube5 r-marginVertical-712mwr r-textAlign-q4m81j r-textTransform-tsynxw"
            dir="auto"
            style={
              Object {
                "color": "rgba(255,255,255,1.00)",
                "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontWeight": "500",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406 r-textAlign-q4m81j r-textTransform-tsynxw"
              dir="auto"
              style={
                Object {
                  "color": "rgba(255,255,255,1.00)",
                  "fontFamily": "Roboto",
                  "fontSize": "14px",
                  "fontWeight": "500",
                  "lineHeight": "20px",
                  "paddingTop": "1px",
                  "textDecoration": "none",
                }
              }
            >
              Save
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WrappedSaveButton matches snapshot 2`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitBoxPack": "end",
        "WebkitJustifyContent": "flex-end",
        "display": "flex",
        "justifyContent": "flex-end",
        "marginBottom": "0px",
        "marginTop": "0px",
        "msFlexPack": "end",
        "position": "absolute",
        "right": "0px",
        "top": "0px",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      data-testid="save_button"
      style={
        Object {
          "WebkitAlignItems": "stretch",
          "WebkitBoxAlign": "stretch",
          "alignItems": "stretch",
          "backgroundColor": "rgba(0,0,0,0.00)",
          "borderBottomColor": "rgba(0,175,255,1.00)",
          "borderBottomLeftRadius": "50px",
          "borderBottomRightRadius": "50px",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "1px",
          "borderLeftColor": "rgba(0,175,255,1.00)",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "1px",
          "borderRightColor": "rgba(0,175,255,1.00)",
          "borderRightStyle": "solid",
          "borderRightWidth": "1px",
          "borderTopColor": "rgba(0,175,255,1.00)",
          "borderTopLeftRadius": "50px",
          "borderTopRightRadius": "50px",
          "borderTopStyle": "solid",
          "borderTopWidth": "1px",
          "display": "flex",
          "marginBottom": "0px",
          "marginLeft": "0px",
          "marginRight": "0px",
          "marginTop": "0px",
          "minHeight": "44px",
          "minWidth": "86px",
          "msFlexAlign": "stretch",
          "paddingBottom": "0px",
          "paddingLeft": "0px",
          "paddingRight": "0px",
          "paddingTop": "0px",
        }
      }
    >
      <div
        className="css-cursor-18t94o4 css-view-1dbjc4n r-cursor-1loqt21 r-overflow-1udh08x r-position-bnwqim r-touchAction-1otgn73"
        data-focusable={true}
        disabled={false}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        role="button"
        style={
          Object {
            "borderBottomLeftRadius": "50px",
            "borderBottomRightRadius": "50px",
            "borderTopLeftRadius": "50px",
            "borderTopRightRadius": "50px",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1777fci"
        >
          <div
            className="css-text-901oao css-textOneLine-bfa6kz r-letterSpacing-ud0q2t r-marginHorizontal-1ybube5 r-marginVertical-712mwr r-textAlign-q4m81j r-textTransform-tsynxw"
            dir="auto"
            style={
              Object {
                "color": "rgba(12,38,61,1.00)",
                "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontWeight": "500",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406 r-textAlign-q4m81j r-textTransform-tsynxw"
              dir="auto"
              style={
                Object {
                  "color": "rgba(255,255,255,1.00)",
                  "fontFamily": "Roboto",
                  "fontSize": "14px",
                  "fontWeight": "500",
                  "lineHeight": "20px",
                  "paddingTop": "1px",
                  "textDecoration": "none",
                }
              }
            >
              Title in SaveButton
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WrappedSaveButton matches snapshot 3`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitBoxPack": "end",
        "WebkitJustifyContent": "flex-end",
        "display": "flex",
        "justifyContent": "flex-end",
        "marginBottom": "0px",
        "marginTop": "0px",
        "msFlexPack": "end",
        "position": "absolute",
        "right": "0px",
        "top": "0px",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      data-testid="save_button"
      style={
        Object {
          "WebkitAlignItems": "stretch",
          "WebkitBoxAlign": "stretch",
          "alignItems": "stretch",
          "backgroundColor": "rgba(12,38,61,1.00)",
          "borderBottomColor": "rgba(0,175,255,1.00)",
          "borderBottomLeftRadius": "50px",
          "borderBottomRightRadius": "50px",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "0px",
          "borderLeftColor": "rgba(0,175,255,1.00)",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0px",
          "borderRightColor": "rgba(0,175,255,1.00)",
          "borderRightStyle": "solid",
          "borderRightWidth": "0px",
          "borderTopColor": "rgba(0,175,255,1.00)",
          "borderTopLeftRadius": "50px",
          "borderTopRightRadius": "50px",
          "borderTopStyle": "solid",
          "borderTopWidth": "0px",
          "boxShadow": "0px 0.75px 1.5px rgba(0,0,0,0.24)",
          "display": "flex",
          "marginBottom": "0px",
          "marginLeft": "0px",
          "marginRight": "0px",
          "marginTop": "0px",
          "minHeight": "44px",
          "minWidth": "86px",
          "msFlexAlign": "stretch",
          "paddingBottom": "0px",
          "paddingLeft": "0px",
          "paddingRight": "0px",
          "paddingTop": "0px",
        }
      }
    >
      <div
        className="css-cursor-18t94o4 css-view-1dbjc4n r-cursor-1loqt21 r-overflow-1udh08x r-position-bnwqim r-touchAction-1otgn73"
        data-focusable={true}
        disabled={false}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        role="button"
        style={
          Object {
            "borderBottomLeftRadius": "50px",
            "borderBottomRightRadius": "50px",
            "borderTopLeftRadius": "50px",
            "borderTopRightRadius": "50px",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1777fci"
        >
          <div
            className="css-text-901oao css-textOneLine-bfa6kz r-letterSpacing-ud0q2t r-marginHorizontal-1ybube5 r-marginVertical-712mwr r-textAlign-q4m81j r-textTransform-tsynxw"
            dir="auto"
            style={
              Object {
                "color": "rgba(255,255,255,1.00)",
                "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontWeight": "500",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406 r-textAlign-q4m81j r-textTransform-tsynxw"
              dir="auto"
              style={
                Object {
                  "color": "rgba(255,255,255,1.00)",
                  "fontFamily": "Roboto",
                  "fontSize": "14px",
                  "fontWeight": "500",
                  "lineHeight": "20px",
                  "paddingTop": "1px",
                  "textDecoration": "none",
                }
              }
            >
              SaveButton with color
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WrappedSaveButton matches snapshot 4`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitBoxPack": "end",
        "WebkitJustifyContent": "flex-end",
        "display": "flex",
        "justifyContent": "flex-end",
        "marginBottom": "0px",
        "marginTop": "0px",
        "msFlexPack": "end",
        "position": "absolute",
        "right": "0px",
        "top": "0px",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      data-testid="save_button"
      style={
        Object {
          "WebkitAlignItems": "stretch",
          "WebkitBoxAlign": "stretch",
          "alignItems": "stretch",
          "backgroundColor": "rgba(12,38,61,1.00)",
          "borderBottomColor": "rgba(0,175,255,1.00)",
          "borderBottomLeftRadius": "50px",
          "borderBottomRightRadius": "50px",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "0px",
          "borderLeftColor": "rgba(0,175,255,1.00)",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0px",
          "borderRightColor": "rgba(0,175,255,1.00)",
          "borderRightStyle": "solid",
          "borderRightWidth": "0px",
          "borderTopColor": "rgba(0,175,255,1.00)",
          "borderTopLeftRadius": "50px",
          "borderTopRightRadius": "50px",
          "borderTopStyle": "solid",
          "borderTopWidth": "0px",
          "boxShadow": "0px 0.75px 1.5px rgba(0,0,0,0.24)",
          "display": "flex",
          "marginBottom": "0px",
          "marginLeft": "0px",
          "marginRight": "0px",
          "marginTop": "0px",
          "minHeight": "44px",
          "minWidth": "86px",
          "msFlexAlign": "stretch",
          "paddingBottom": "0px",
          "paddingLeft": "0px",
          "paddingRight": "0px",
          "paddingTop": "0px",
        }
      }
    >
      <div
        className="css-cursor-18t94o4 css-view-1dbjc4n r-cursor-1loqt21 r-overflow-1udh08x r-position-bnwqim r-touchAction-1otgn73"
        data-focusable={true}
        disabled={false}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        role="button"
        style={
          Object {
            "borderBottomLeftRadius": "50px",
            "borderBottomRightRadius": "50px",
            "borderTopLeftRadius": "50px",
            "borderTopRightRadius": "50px",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1777fci"
        >
          <div
            className="css-text-901oao css-textOneLine-bfa6kz r-letterSpacing-ud0q2t r-marginHorizontal-1ybube5 r-marginVertical-712mwr r-textAlign-q4m81j r-textTransform-tsynxw"
            dir="auto"
            style={
              Object {
                "color": "rgba(255,255,255,1.00)",
                "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontWeight": "500",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406 r-textAlign-q4m81j r-textTransform-tsynxw"
              dir="auto"
              style={
                Object {
                  "color": "rgba(255,255,255,1.00)",
                  "fontFamily": "Roboto",
                  "fontSize": "14px",
                  "fontWeight": "500",
                  "lineHeight": "20px",
                  "paddingTop": "1px",
                  "textDecoration": "none",
                }
              }
            >
              SaveButton with custom delay
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
